<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="400dp"
    android:layout_height="180dp"
    android:layout_gravity="center_horizontal"
    >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/holo_red_light"
        android:textSize="24sp"
        android:text="@string/login"
        android:layout_gravity="center_horizontal"
        />

    <LinearLayout
        android:layout_width="400dp"
        android:layout_height="120dp"
        android:background="@color/logbackground"
        android:orientation="vertical"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/inputPassword"
            android:layout_gravity="center_horizontal"
            />
        <EditText
            android:id="@+id/et_protected_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:gravity="center_horizontal"
            />

        <LinearLayout
            android:layout_width="400dp"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:gravity="center_horizontal"
            >
            <Button
                android:id="@+id/bt_protected_login_yes"
                android:layout_width="140dp"
                android:layout_height="40dp"
                android:text="@string/protectedYes"
                />
            <Button
                android:id="@+id/bt_protected_login_no"
                android:layout_width="140dp"
                android:layout_height="40dp"
                android:layout_marginLeft="10dp"
                android:text="@string/protectedNo"/>

            </LinearLayout>

        </LinearLayout>

</LinearLayout>