<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ll_app_popup"
    android:layout_width="300dp"
    android:layout_height="70dp"
    android:background="@android:color/holo_blue_light"
    android:gravity="center_vertical"
    android:orientation="horizontal" >

    <LinearLayout
        android:id="@+id/ll_app_uninstall"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginLeft="8dp"
        android:gravity="center_horizontal|center_vertical"
        android:orientation="vertical" >

        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:scaleType="fitXY"
            android:src="@drawable/img1"
            android:contentDescription="@string/hello_world" />

        <TextView
            android:gravity="center_horizontal"
            android:layout_width="70dp"
            android:layout_height="20dp"
            android:text="@string/app_manager_delete" />

    </LinearLayout>

    <View
        android:layout_width="1dp"
        android:layout_height="50dp"
        android:background="#ff00ff66" />

    <LinearLayout
        android:id="@+id/ll_app_start"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:gravity="center_horizontal|center_vertical"
        android:orientation="vertical" >

        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:scaleType="fitXY"
            android:src="@drawable/img2"
            android:contentDescription="@string/hello_world" />

        <TextView
            android:gravity="center_horizontal"
            android:layout_width="70dp"
            android:layout_height="20dp"
            android:text="@string/app_manager_run" />

    </LinearLayout>

    <View
        android:layout_width="1dp"
        android:layout_height="50dp"
        android:background="#ff00ff66" />

    <LinearLayout
        android:id="@+id/ll_app_share"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:gravity="center_horizontal|center_vertical"
        android:orientation="vertical" >

        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:scaleType="fitXY"
            android:src="@drawable/img3"
            android:contentDescription="@string/hello_world" />

        <TextView
            android:layout_width="70dp"
            android:layout_height="20dp"
            android:gravity="center_horizontal"
            android:text="@string/app_manager_share"/>

    </LinearLayout>

    <View
        android:layout_width="1dp"
        android:layout_height="50dp"
        android:background="#ff00ff66" />

    <LinearLayout
        android:id="@+id/ll_app_lock"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:gravity="center_horizontal|center_vertical"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/iv_app_lock"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:scaleType="fitXY"
            android:src="@drawable/unlock"
            android:contentDescription="@string/hello_world" />

        <TextView
            android:id="@+id/tv_app_lock"
            android:gravity="center_horizontal"
            android:layout_width="70dp"
            android:layout_height="20dp"
            android:text="@string/app_lock"/>

    </LinearLayout>

</LinearLayout>